--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cookie&family=Vibur&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -24,6 +25,14 @@
     -60deg,
     #fba1b6 0%,
     #ffdbaa 100%
+  );
+}
+
+.blue-white-gradient {
+  background: -webkit-linear-gradient(
+    -60deg,
+    rgb(172, 230, 252,0.5) 0%,
+    rgb(255, 255, 255, 0.3) 100%
   );
 }
 
